<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="app_logo">Political Preparedness Logo</string>
    <string name="upcoming_election">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="saved_election">Saved Elections</string>
    <string name="loading_spinner">Loading spinner</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="correspondece_header">Mailing Address</string>
    <string name="address_line">Address Line</string>
    <string name="follow">Follow Election</string>
    <string name="unfollow">Unfollow Election</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="state">State</string>
    <string name="representative_photo">Representative photo</string>
    <string name="twitter_icon">Twitter icon</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="web_icon">Web icon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="background_location_permission_title">Location services</string>
    <string name="background_location_permission_message">You need to grant location permission in order to select the location.</string>

</resources>
