<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp8">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar"
            android:layout_height="@dimen/avatar"
            android:contentDescription="@string/representative_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile"
            profileImage="@{representative.official.photoUrl}"/>

        <TextView
            android:id="@+id/representative_tv"
            style="@style/MyItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp8"
            android:maxLines="1"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            tools:text="CA Supreme Court Justice"/>

        <TextView
            android:id="@+id/name_tv"
            style="@style/MyItemSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@{representative.official.name}"
            app:layout_constraintBottom_toTopOf="@id/office_tv"
            app:layout_constraintEnd_toStartOf="@+id/img_web"
            app:layout_constraintStart_toStartOf="@+id/representative_tv"
            app:layout_constraintTop_toBottomOf="@+id/representative_tv"
            tools:text="Ming Win Chin"/>

        <TextView
            android:id="@+id/office_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="@+id/name_tv"
            app:layout_constraintStart_toStartOf="@+id/name_tv"
            app:layout_constraintTop_toBottomOf="@+id/name_tv"
            tools:text="Nonpartisan" />

        <ImageView
            android:id="@+id/img_twitter"
            android:layout_width="@dimen/social"
            android:layout_height="@dimen/social"
            android:contentDescription="@string/twitter_icon"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="@+id/representative_tv"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="@dimen/social"
            android:layout_height="@dimen/social"
            android:layout_marginEnd="@dimen/dp8"
            android:contentDescription="@string/facebook_icon"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toStartOf="@+id/img_twitter"
            app:srcCompat="@drawable/ic_facebook"/>

        <ImageView
            android:id="@+id/img_web"
            android:layout_width="@dimen/social"
            android:layout_height="@dimen/social"
            android:layout_marginEnd="@dimen/dp8"
            android:contentDescription="@string/web_icon"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toStartOf="@+id/img_facebook"
            app:srcCompat="@drawable/ic_www" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>